--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,119 @@ body{
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
+  overflow-x: hidden;
 }
 
 a{
   color: inherit;
   /* background: ; */
+}
+
+/* styles for the home page */
+
+/* Header Styles */
+
+#header {
+  background: "transparent";
+  display: "flex";
+  justify-content: "space-between";
+  padding: "20px 45px";
+  border-bottom: "1px solid #212123";
+}
+
+#home-navigation {
+    color: "#a4a4a4";
+    position: "relative";
+    top: "10px"; 
+}
+
+.link-item {
+  color: "inherit";
+  text-decoration: "none";
+  padding: "5px 15px";
+  text-transform: "uppercase";
+  font-size: ".8em";
+  font-weight: "bold";
+}
+
+/* style for the layout of the layout */
+
+#logo-section{
+    display: "flex";
+    width: "20%";
+    font-size: "1.3em"
+}
+
+#siteName{
+  font-weight: "bold";
+  color: "white";
+}
+
+
+#logo-image{ 
+  width: "50px"
+}
+
+#site-name-holder{
+  display: "flex";
+  flex-direction: "column";
+  margin-left: "5px"
+}
+
+#logo-sub{
+  font-size: ".6em";
+  color: "#a4a4a4";
+  text-transform: "capitalize"
+}
+
+
+/* Home center-piece styles */
+#center-piece{
+  color: "white";
+  min-height: "400px";
+  width: "30%";
+  padding: "80px 40px";
+  font-size: "1.5em"
+}
+
+.intro-text{
+  font-size: ".75em"; 
+  color: "#a4a4a4";
+}
+
+.center-piece-button{
+  border-radius: "10px";
+  padding: "15px 25px";
+  border: "none";
+  font-size: "14px";
+  text-transform: "uppercase";
+  color: "#efefef";
+  margin-right: "15px";
+  background: "transparent";
+  border: "2px solid #efefef";
+}
+
+/* services section style */
+#service-section{
+    background: "#353535";
+    width: "100%";
+    display: "flex";
+    justify-content: "space-arround"
+}
+.service-cards{
+  min-width: "30%";
+  height: "300px";
+  -moz-box-sizing: "border-box";
+  -webkit-box-sizing: "border-box";
+  box-sizing: "border-box";
+  border-radius: "10px";
+  padding: "40px 25px";
+  text-align: "center";
+  background: "#353535";
+}
+
+.service-icons{
+    font-size: "32px";
+    font-weight: "light";
+    color: "#c98524";
 }
