--- a/src/App.css
+++ b/src/App.css
@@ -53,11 +53,10 @@ a{
     font-size: 1.3em
 }
 
-#siteName{
+#site-name{
   font-weight: bold;
   color: white;
 }
-
 
 #logo-image{ 
   width: 50px
@@ -101,6 +100,7 @@ a{
   background: transparent;
   border: 2px solid #efefef;
   transition: color .2s, border-color .2s;
+  margin-bottom: 50px;
 }
 
 .center-piece-button:hover{
@@ -174,6 +174,7 @@ a{
 #team-of-experts{
   color: white;
   background: #242424;
+  padding: 20px;
 }
 
 
@@ -191,7 +192,7 @@ a{
 .profile-head h2{
   font-size: 2em;
   text-transform: capitalize;
-  margin-top: 15px;
+  margin-top: 35px;
   font-weight: bolder;
 }
 
@@ -199,14 +200,17 @@ a{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 30px;
+  padding-left: 45px;
 }
 
 .profile{
-  flex-basis: 15vw;
-  margin-bottom: 30px;
+  max-width: 30%;
   text-align: left;
   font-weight: bold;
+}
+
+.profile-picture{
+  width: 70%;
 }
 
 .title{
@@ -218,4 +222,51 @@ a{
 .title,
 .profile-name{
   padding-left: 10px;
+}
+
+/* about section styles  */
+
+#about-section{
+  background: url(./img/about-background.jpg);
+  min-height: 300px;
+  margin: 0px;
+  margin-top: 0px;
+  padding: 20px;
+}
+
+#about-holder{
+  width: 70%;
+  margin: 50px auto;
+  text-align: center;
+  background-color: #1b1b1b;
+  padding: 50px;
+  border-radius: 10px;
+}
+
+.about-body{
+  text-align: left;
+}
+
+#about-section p,
+#about-section sub{
+  color: rgb(117, 117, 117);
+  font-size: .8em;
+}
+
+#about-section h1{
+  font-size: 2em;
+  color: white;
+}
+
+#about-section h1,
+#about-section h3,
+#about-section sub{
+  text-transform: uppercase;
+}
+
+#about-section h3,
+#about-section span,
+#about-section sub
+{
+  color: #e7ba40;
 }
