--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@ body{
   padding: 0px;
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
+  font-family: Lato;
+  font-variant: bold;
   background-color: black;
   background-image: url(./img/bitcoin-background.jpg);
   background-attachment: fixed;
@@ -13,9 +15,13 @@ body{
   overflow-x: hidden;
 }
 
+button{
+  outline: none;
+}
+
 a{
   color: inherit;
-  /* background: ; */
+  text-decoration: none;
 }
 
 /* styles for the home page */
@@ -43,6 +49,10 @@ a{
   text-transform: uppercase;
   font-size: .8em;
   font-weight: bold;
+}
+
+.link-item:hover{
+  cursor: pointer;
 }
 
 /* style for the layout of the layout */
@@ -78,7 +88,7 @@ a{
 /* Home center-piece styles */
 #center-piece{
   color: white;
-  min-height: 400px;
+  min-height: 550px;
   width: 30%;
   padding: 80px 40px;
   font-size: 1.5em
@@ -101,6 +111,7 @@ a{
   border: 2px solid #efefef;
   transition: color .2s, border-color .2s;
   margin-bottom: 50px;
+  text-decoration: none;
 }
 
 .center-piece-button:hover{
@@ -171,12 +182,11 @@ a{
 }
 
 /* design for experts section */
-#team-of-experts{
+.team-of-experts{
   color: white;
   background: #242424;
   padding: 20px;
 }
-
 
 .profile-head{
   padding: 80px 0px 20px 0px;
@@ -199,7 +209,7 @@ a{
 .profile-holder{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   padding-left: 45px;
 }
 
@@ -270,6 +280,37 @@ a{
 #about-section sub
 {
   color: #e7ba40;
+}
+
+
+ /* testimonies holder style  */
+
+#testimonies{
+  background: #353535;
+  margin-top: -20px;
+  padding: 40px;
+  display: flex;
+  justify-content: space-around;
+  color: white;
+}
+
+#testimonies sub{
+  color: #f1c24b;
+  display: block;
+  margin-top: 60px;
+  font-weight: bold;
+}
+
+#video-holder{
+  display: flex;
+}
+
+#video-holder video{
+  width: 25%;
+  height: 180px;
+  border-radius: 15px;
+  box-shadow: 2px 2px 5px #292929;
+  margin: 30px auto 0px auto;
 }
 
 /* footer section styles */
