--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ a{
   display: flex;
   justify-content: space-between;
   padding: 40px 45px 25px 45px;
-  border-bottom: 1px solid #212123;
+  /* border-bottom: 1px solid #212123; */
 }
 
 #navigation {
@@ -267,6 +267,12 @@ a{
 #about-section h1{
   font-size: 2em;
   color: white;
+}
+
+#about-section p{
+  font-weight: bold;
+  line-height: 25px;
+  font-size: 1.1em;
 }
 
 #about-section h1,
