--- a/src/css/user-dashboard.css
+++ b/src/css/user-dashboard.css
@@ -1,4 +1,75 @@
-.user-dashboarb{
+.user-dashboard{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    background: #282a36;
+    overflow: hidden;
+}
+
+#user-dashboard-nav{
     background: white;
-    min-height: 100%;
+    width: 20%;
+    overflow: hidden;
+    text-align: center;
+}
+
+#user-dashboard-nav #logo-section{
+    padding: 20px;
+    color: #727171;
+    -webkit-transform: scale(.8);
+    -moz-transform: scale(.8);
+    -o-transform: scale(.8);
+    transform: scale(.8);
+}
+
+#user-dashboard-nav #logo-section #site-name{
+    color: inherit;
+}
+
+.user-nav-profile {
+    color: #282a36;
+}
+
+.user-nav-profile .profile-img{
+    width: 40%;
+    display: block;
+    margin:  20px auto;
+    border-radius: 50%;
+}
+
+#user-navigation-section{
+    color: #3b3e50;
+    margin-top: 40px;
+    padding: 10px;
+}
+
+#user-navigation-section h4{
+    text-align: left;
+    padding-left: 10px;
+}
+
+#user-navigation-section a {
+    display: block;
+    text-align: center;
+    border-bottom: 1px solid #494d61;
+    color: inherit;
+    text-transform: capitalize;
+    font-weight: bold;
+    padding: 15px 0px;
+}
+
+#user-navigation-section a:hover,
+#user-navigation-section a:focus,
+#user-navigation-section a.active{
+    color: #1f212a;
+    border-bottom: 2px solid  #1f212a;
+    font-weight: bolder;
+}
+
+#user-dashboard-body{
+    color: white;
+}
+
+.no-display{
+    display: none;
 }
