--- a/src/css/user-dashboard.css
+++ b/src/css/user-dashboard.css
@@ -1,16 +1,15 @@
 .user-dashboard{
     display: flex;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background: #282a36;
-    overflow: hidden;
 }
 
 #user-dashboard-nav{
     background: white;
     width: 20%;
-    overflow: hidden;
     text-align: center;
+    position: fixed;
 }
 
 #user-dashboard-nav #logo-section{
@@ -25,6 +24,7 @@
 #user-dashboard-nav #logo-section #site-name{
     color: inherit;
 }
+
 
 .user-nav-profile {
     color: #282a36;
@@ -51,25 +51,118 @@
 #user-navigation-section a {
     display: block;
     text-align: center;
-    border-bottom: 1px solid #494d61;
     color: inherit;
     text-transform: capitalize;
     font-weight: bold;
-    padding: 15px 0px;
+    padding: 10px 0px;
+    margin-top: 5px;
+    background: rgb(200, 200, 200);
+    border-radius: 10px;
 }
 
 #user-navigation-section a:hover,
 #user-navigation-section a:focus,
 #user-navigation-section a.active{
-    color: #1f212a;
-    border-bottom: 2px solid  #1f212a;
+    color: #3662a5;
+    border-left: 4px solid  #3c73c5;
     font-weight: bolder;
+    box-sizing: border-box;
+}
+
+#user-navigation-holder{
+    position: fixed;
 }
 
 #user-dashboard-body{
     color: white;
+    z-index: 2;
+    background: inherit;
+    margin-left: 20%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 8%;
+}
+
+#user-dashboard-body  div,
+#user-dashboard-body  h2{
+    margin: 20px auto;
+}
+
+#user-dashboard-body h2{
+    text-align: left;
+    width: 100%;
+}
+
+.user-profile-details{
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background: #2f3e47;
+    width: 100%;
+    text-transform: capitalize;
+    font-weight: bold;
+}
+
+.user-profile-details p{
+    color: #61859c;
+}
+
+.user-profile-details p span{
+    display: inline-block;
+    margin-left: 15px;
+    font-weight: normal;
 }
 
 .no-display{
     display: none;
+}
+
+.bitcoin-widget-holder{
+    display: flex;
+    justify-content: space-around;
+}
+
+.bitcoin-widget-holder iframe{
+    width: 30%;
+    height: 40vh;
+}
+
+.profile-change-form-holder{
+    background: #2f3e47;
+    padding: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 10px;
+}
+
+.profile-change-form-holder form div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.profile-change-form-holder input{
+    border: 1px solid #506775;
+    background: #384b57;
+    width: 400px;
+    padding: 15px;
+    color: #2f3e47;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    outline: none;
+    transition: border .3s;
+}
+
+.profile-change-form-holder input:focus{
+    border: 2px solid #506775;
+}
+
+.profile-change-form-holder input[type=submit]{
+    width: 30%;
+    border: none;
+    background: rgb(100, 65, 133);
+    font-size: inherit;
+    font-weight: bold;
+    color: white;
 }
