--- a/src/css/user-dashboard.css
+++ b/src/css/user-dashboard.css
@@ -5,6 +5,10 @@
     background: #282a36;
 }
 
+.no-display{
+    display: none;
+}
+
 #user-dashboard-nav{
     background: white;
     width: 20%;
@@ -25,6 +29,16 @@
     color: inherit;
 }
 
+.question-header{
+    background: rgb(25, 110, 180);
+    border-radius: 10px;
+    font-weight: bolder;
+    padding: 20px;
+    width: 95%;
+    text-align: left;
+    position: relative;
+    left: -50px;
+}
 
 .user-nav-profile {
     color: #282a36;
@@ -33,13 +47,27 @@
 .user-nav-profile .profile-img{
     width: 40%;
     display: block;
-    margin:  20px auto;
+    margin:  10px auto;
     border-radius: 50%;
 }
 
+.user-nav-profile button{
+    background: transparent;
+    border: 2px solid black;
+    border-radius: 50%;
+    padding: 5px;
+}
+
+.user-nav-profile button:hover{
+    cursor: pointer;
+    color: rgb(115, 115, 195);
+    border-color: blue;
+} 
+
+
 #user-navigation-section{
     color: #3b3e50;
-    margin-top: 40px;
+    margin-top: 20px;
     padding: 10px;
 }
 
@@ -71,6 +99,7 @@
 
 #user-navigation-holder{
     position: fixed;
+    overflow-y: scroll;
 }
 
 #user-dashboard-body{
