--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 *{
-  box-sizing: border-box;
+  box-sizing: border-content;
 }
 body{
   padding: 0px;
@@ -12,7 +12,7 @@ body{
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
-  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 button{
@@ -23,6 +23,7 @@ a{
   color: inherit;
   text-decoration: none;
 }
+
 
 /* styles for the home page */
 
@@ -89,7 +90,7 @@ a{
 #center-piece{
   color: white;
   min-height: 550px;
-  width: 30%;
+  width: 40%;
   padding: 80px 40px;
   font-size: 1.5em
 }
@@ -122,26 +123,27 @@ a{
 
 /* services section style */
 #service-section{
-    background: #353535;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 80px 0px;
+  width: 100%;
+  background: #353535;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 80px 0px;
+  justify-content: space-evenly;
 }
 .service-cards{
   min-width: 20%;
-  max-width: 30%;
+  max-width: 25%;
   min-height: 300px;
   margin: 10px 1.5%;
   background: #292929;
-  /* background-image: url(./img/wallet.png); */
   background-position: top right;
   background-repeat: no-repeat;
   background-size: auto;
-  box-sizing: border-box;
   text-align: center;
   padding: 5px 15px;
+  box-shadow: 2px 2px 5px rgba(31, 30, 30, 0.411);
 }
+
 
 #service-section .service-cards i{
   color: #f1c24b;
@@ -331,6 +333,7 @@ a{
 .text-testimony-holder p{
   margin: 0px;
   line-height: 35px;
+  transition: 1s;
 }
 .text-testimony-holder sub{
   display: block;
@@ -343,7 +346,7 @@ a{
 }
 
 .testimony-body i{
-  padding: 20px;
+  padding: 10px;
   font-size: 1.5em;
 }
 
@@ -415,3 +418,244 @@ footer{
   font-size: .8em;
   font-weight: bold;
 }
+
+/* Tablet View */
+
+@media screen and (max-width: 1080px){
+
+  body{
+    background-size: 130% 100vh;
+    overflow: none;
+  }
+
+  /* start of header responsiveness *Tablet */
+  #header{
+    padding: 30px 35px 15px 35px;
+  }
+
+  #logo-section{
+    transform: scale(.8);
+  }
+  /* end of header responsiveness tablet */
+
+  /* start of center-piece responsiveness */
+  #center-piece{
+    min-height: 300px;
+  }
+
+  #center-piece h1{
+    font-size: 1.5em;
+  }
+
+  .intro-text{
+    font-size: .65em;
+  }
+
+  .center-piece-button{
+    font-size: .6em;
+  }
+  /* end of center-piec */
+
+  /* start of service section */
+  #service-section{
+    justify-content: center;
+    padding: 40px 0px;
+  }
+
+  .service-cards{
+    margin: 10px 10px;
+    min-width: 35%;
+    min-height: 240px;
+    /* margin: 0px; */
+  }
+
+  .service-cards h3{
+    font-size: 1em;
+    line-height: 25px;
+  }
+
+  .service-cards p{
+    font-size: .8em;
+    line-height: 25px;
+  }
+
+  /* start team of experts responsiveness */
+
+  .profile-holder{
+    justify-content: center;
+  }
+
+  .profile-holder .profile{
+    min-width: 40%;
+    max-width: 40%;
+  }
+
+  .profile-picture{
+    width: 70%;
+  }
+
+  /* end team of experts */
+
+
+  /* start of testimonies responsiveness */
+
+  #text-testimonies .text-testimony-holder{
+    width: 60%;
+  }
+
+  #testimonies {
+    flex-direction: column;
+  }
+
+  #testimonies sub, 
+  #testimonies h1{
+    text-align: center;
+  }
+
+  #video-holder{
+    justify-content: center;
+  }
+
+  #video-holder video{
+    min-width: 20%;
+    max-width: 100%;
+  }
+
+  /* end testimonies */
+}
+
+
+@media screen and (max-width: 760px){
+  body{
+    background-size: 105vw 85vh;
+    background-position: bottom;
+  }
+
+
+  /* header responsiveness */
+
+  #header{
+    flex-direction: column;
+  }
+
+  #navigation{
+    position: static;
+    width: 100%;
+    padding: 10px 0px;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .link-item{
+    font-size: .65em;
+    padding: 0px 5px;
+  }
+
+  #logo-section{
+    transform: scale(.6);
+    position: relative;
+    top: -8px;
+    left: -5px;
+  }
+
+  /* header end */
+
+  /* center piece responsiveness */
+
+  #center-piece{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding: 0px;
+  }
+
+  /* center piece end */
+
+  /* services responsiveness */
+  .service-cards{
+    min-width: 70%;
+    max-width: 100%;
+  }
+
+  /* services end */
+
+  /* .team-of-experts responsiveness */
+
+  .profile-holder{
+    padding: 0px;
+  }
+
+  .profile-picture{
+    width: 90%;
+  }
+
+  .profile-head{
+    font-size: 1em;
+  }
+
+  .title,
+  .profile-name{
+    font-size: .8em;
+  }
+
+  /* .team-of-experts end */
+  
+  /* about-section reponsiveness */
+
+  #about-holder{
+    padding: 25px;
+    width: 85%;
+  }
+
+  #about-section h1{
+    font-size: 1.3em;
+  }
+
+  #about-section h3{
+    font-size: 1em;
+  }
+
+  #about-section p{
+    font-size: .9em;
+  }
+
+  /* end about-section */
+
+  /* testimony responsiveness */
+
+  #text-testimonies{
+    min-height: 350px;
+    max-height: 60vh;
+  }
+
+  .text-testimony-holder{
+    width: 70%;
+    font-size: .8em;
+  }
+
+  .text-testimony-holder div,
+  .text-testimony-holder p{
+    line-height: 15px;
+  }
+
+  .testimony-body i{
+    font-size: 1em;
+    padding: 5px;
+  }
+
+  #testimonies h1{
+    font-size: 1.2em;
+  }
+
+  #video-holder video{
+    min-width: 90%;
+  }
+  
+  /* testimonies end */
+
+  /* footer responsiveness */
+
+  #footer-nav{
+    display: none;
+  }
+}
+
