--- a/frontend/src/css/user-dashboard.css
+++ b/frontend/src/css/user-dashboard.css
@@ -102,6 +102,13 @@
     overflow-y: scroll;
 }
 
+button,
+input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    }
+
 #user-dashboard-body{
     color: white;
     z-index: 2;
@@ -212,6 +219,10 @@
     min-width: 30%;
     max-width: 30%;
     margin-right: 20px;
+}
+
+.plan-card:hover{
+    cursor: pointer;
 }
 
 .plan-card span{
